# mikrotik-sms

./: README.md  pyproject.toml
src/mikrotik_sms/: cli.py
